<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iCatch</string>
    <string name="hello_world">Hello world!</string>

    <!-- Menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_restart">Restart</string>

    <!-- Settings menu -->
    <string name="preference_activity_title">Preferences</string>
    <string name="pref_user_profile">User profile</string> <!-- Section -->
    <string name="pref_user_setname">Set username</string>
    <string name="pref_game_settings">Game settings</string> <!-- Section -->
    <string name="pref_game_difficulty">Difficulty</string>
    <string name="pref_game_lives">Number of lives</string>
    <string name="pref_game_icons">Change falling object icon</string>
    <string name="pref_game_reset">Reset leaderboard</string>

    <!-- Visible strings on main interface -->
    <string name="text_score">Score : %d</string>

    <!-- Main buttons -->
    <string name="btn_pause">Pause</string>
    <string name="btn_unpause">Unpause</string>
    <string name="btn_start">Start</string>

    <!-- Gameover popup -->
    <string name="alertdialog_gameover_title">Game over !</string>
    <string name="alertdialog_gameover_text">You lost all your life. The game is over and your score is %d.</string>
    <string name="alertdialog_gameover_buttontext">Ok</string>

    <!-- Default settings -->
    <string name="def_username">Unknown player</string>
    <string name="def_difficulty">2</string>
    <string name="def_nbLives">3</string>
    <string name="def_icon">1</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="action_settings">Settings</string>

</resources>
