<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_user_setname"
                android:key="prefUsername"
                android:defaultValue="@string/def_username" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_game_settings" >
        <ListPreference
                android:key="prefDifficulty"
                android:entries="@array/difficulty"
                android:entryValues="@array/difficulty_values"
                android:title="@string/pref_game_difficulty"
                android:defaultValue="@string/def_difficulty" />

        <ListPreference
                android:key="prefNbLives"
                android:entries="@array/nbLives"
                android:entryValues="@array/nbLives_values"
                android:title="@string/pref_game_lives"
                android:defaultValue="@string/def_nbLives" />
    </PreferenceCategory>

</PreferenceScreen>